--- a/pytorch_test.ipynb
+++ b/pytorch_test.ipynb
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "6e69eaf0",
    "metadata": {},
    "outputs": [
@@ -171,8 +171,8 @@
     "plt.plot([0, 1.1], [0, 1.1], 'r--', linewidth=2, alpha=0.8, label='Linear Response')\n",
     "plt.xlim(0, 1.1)\n",
     "plt.ylim(0, 1.1)\n",
-    "plt.xlabel('|x|', fontsize=20)\n",
-    "plt.ylabel('|y| ', fontsize=20)\n",
+    "plt.xlabel('Normalised |x|', fontsize=20)\n",
+    "plt.ylabel('Normalised |y| ', fontsize=20)\n",
     "plt.title('Power Amplifier Nonlinearity: Input vs Output Magnitude', fontsize=20, fontweight='bold')\n",
     "plt.legend(fontsize=20)\n",
     "plt.grid(True, alpha=0.3)\n",
