--- a/pytorch_test.ipynb
+++ b/pytorch_test.ipynb
@@ -1225,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "500e161d",
    "metadata": {},
    "outputs": [
@@ -1261,7 +1261,7 @@
     "    errors.append(error)  # Store the error for this model\n",
     "\n",
     "    axs[i].scatter(abs(x_data[2*num_memory_levels:]), np.angle(y_lin.flatten()) - np.angle(x_data[2*num_memory_levels:]), s=1.5, alpha=0.7, c='blue', label='Linearized PA Output')\n",
-    "    axs[i].set_xlabel(\"|x| (Input Magnitude)\", fontsize=18, fontweight='bold')\n",
+    "    axs[i].set_xlabel(\"|x|\", fontsize=18, fontweight='bold')\n",
     "    axs[i].set_ylabel(\"Phase Distortion (radians)\", fontsize=18, fontweight='bold')\n",
     "    axs[i].set_title(f\"Pruning Rate λ = {weight_cut_values[i]}\", fontsize=20, fontweight='bold')\n",
     "    axs[i].grid(True, alpha=0.3)\n",
