return here if everything breaks

--- a/sparse_nn.ipynb
+++ b/sparse_nn.ipynb
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "e3184859",
    "metadata": {},
    "outputs": [],
@@ -408,7 +408,7 @@
     "            nmse = 10 * np.log10(nmse)\n",
     "        return nmse\n",
     "    \n",
-    "    def evaluate_output(self, x):\n",
+    "    def evaluate_nn_output(self, x):\n",
     "        \"\"\"Evaluate model output for given input x.\"\"\"\n",
     "        self.pntdnn.eval()\n",
     "        with torch.no_grad():\n",
@@ -416,31 +416,24 @@
     "            outputs = self.pntdnn(inputs)\n",
     "        return outputs.numpy()\n",
     "    \n",
-    "    def evaluate_output_through_pa(self, A, x):\n",
+    "    def evaluate_phase_denormalised_output(self, x, phase):\n",
+    "        \"\"\"Evaluate model output for given input x with phase denormalization.\"\"\"\n",
+    "        nn_outputs = self.evaluate_nn_output(x)\n",
+    "        output = (nn_outputs[:, 0] + 1j * nn_outputs[:, 1]) * np.conj(phase)\n",
+    "        return output\n",
+    "    \n",
+    "    def evaluate_output_through_pa(self, data_obj, A, x, num_memory_levels=3, num_nl_orders=5):\n",
     "        \"\"\"Evaluate model output for given input x through PA volterra model.\"\"\"\n",
-    "        self.pntdnn.eval()\n",
-    "        with torch.no_grad():\n",
-    "            inputs = torch.tensor(x, dtype=torch.float32)\n",
-    "            nn_outputs = self.pntdnn(inputs).numpy()\n",
+    "        # Get NN output (phase-normalized I/Q)\n",
+    "        nn_outputs = self.evaluate_nn_output(x)\n",
     "        \n",
     "        # Convert NN output back to complex form\n",
     "        nn_outputs_complex = nn_outputs[:, 0] + 1j * nn_outputs[:, 1]\n",
     "        \n",
-    "        # Pass through PA Volterra model\n",
-    "        num_points = len(nn_outputs_complex)\n",
-    "        y_pa = np.zeros((num_points,), dtype=np.complex128)\n",
-    "        num_memory_levels = 3\n",
-    "        num_nl_orders = 5\n",
+    "        # Pass through PA Volterra model using dataset's build_y function\n",
+    "        y_pa = data_obj.build_y(nn_outputs_complex, A, num_memory_levels, num_nl_orders)\n",
     "        \n",
-    "        for n in range(num_memory_levels - 1, num_points):\n",
-    "            col = 0\n",
-    "            for i in range(num_memory_levels):\n",
-    "                ui = nn_outputs_complex[n - i]\n",
-    "                for j in range(num_nl_orders):\n",
-    "                    y_pa[n] += A[col] * (abs(ui) ** (j * 2) * ui)\n",
-    "                    col += 1\n",
-    "        \n",
-    "        return y_pa\n",
+    "        return y_pa.squeeze()\n",
     "\n",
     "\n"
    ]
@@ -517,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "id": "8a9ed9a7",
    "metadata": {},
    "outputs": [
@@ -534,7 +527,7 @@
    ],
    "source": [
     "#Plot the FFT of the model\n",
-    "output_nn_pa = nn_model.evaluate_output_through_pa(A, model_xfc)\n",
+    "output_nn_pa = nn_model.evaluate_output_through_pa(data_obj, A, model_xfc)\n",
     "\n",
     "plot_fft_data(output_nn_pa, title_suffix=\"FFT of NN Model Output Signals\")"
    ]
