--- a/sparse_nn.ipynb
+++ b/sparse_nn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "399fe49b",
    "metadata": {},
    "outputs": [],
@@ -321,7 +321,7 @@
     "    \n",
     "    def plot_pa_characteristic(self, num_samples=800):\n",
     "        \"\"\"\n",
-    "        Plot the PA input-output characteristic showing compression\n",
+    "        Plot the PA input-output characteristic showing AM/AM compression and AM/PM distortion\n",
     "        \n",
     "        Args:\n",
     "            num_samples: Number of random samples to plot (default 800)\n",
@@ -335,16 +335,38 @@
     "        total_points = len(pa_input)\n",
     "        random_indices = np.random.choice(total_points, size=min(num_samples, total_points), replace=False)\n",
     "\n",
-    "        # Create scatter plot showing PA characteristic: input |x| vs output |y|\n",
-    "        plt.figure(figsize=(10, 8))\n",
-    "        plt.scatter(np.abs(pa_input[random_indices]), np.abs(pa_output[random_indices]), \n",
+    "        # Calculate phase difference (AM/PM distortion)\n",
+    "        phase_input = np.angle(pa_input[random_indices], deg=True)\n",
+    "        phase_output = np.angle(pa_output[random_indices], deg=True)\n",
+    "        phase_diff = phase_output - phase_input\n",
+    "        # Wrap phase difference to [-180, 180] degrees\n",
+    "        phase_diff = np.angle(np.exp(1j * np.deg2rad(phase_diff)), deg=True)\n",
+    "\n",
+    "        # Create side-by-side plots\n",
+    "        fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(18, 7))\n",
+    "        \n",
+    "        # Plot 1: AM/AM characteristic (amplitude compression)\n",
+    "        ax1.scatter(np.abs(pa_input[random_indices]), np.abs(pa_output[random_indices]), \n",
     "                    alpha=0.7, label='PA Output', s=10, color='blue')\n",
-    "        plt.plot([0, 1], [0, 1], 'k--', label='Linear (y=x)', linewidth=2)\n",
-    "        plt.xlabel('PA Input Magnitude |x|')\n",
-    "        plt.ylabel('PA Output Magnitude |y|')\n",
-    "        plt.title('Power Amplifier Characteristic\\n(Shows AM/AM compression)')\n",
-    "        plt.legend()\n",
-    "        plt.grid(True, alpha=0.3)\n",
+    "        ax1.plot([0, 1], [0, 1], 'k--', label='Linear (y=x)', linewidth=2)\n",
+    "        ax1.set_xlabel('PA Input Magnitude |x|', fontsize=12)\n",
+    "        ax1.set_ylabel('PA Output Magnitude |y|', fontsize=12)\n",
+    "        ax1.set_title('AM/AM Characteristic\\n(Amplitude Compression)', fontsize=14, fontweight='bold')\n",
+    "        ax1.legend(fontsize=11)\n",
+    "        ax1.grid(True, alpha=0.3)\n",
+    "        \n",
+    "        # Plot 2: AM/PM characteristic (phase distortion)\n",
+    "        ax2.scatter(np.abs(pa_input[random_indices]), phase_diff, \n",
+    "                    alpha=0.7, label='Phase Distortion', s=10, color='red')\n",
+    "        ax2.axhline(0, color='k', linestyle='--', label='No distortion', linewidth=2)\n",
+    "        ax2.set_xlabel('PA Input Magnitude |x|', fontsize=12)\n",
+    "        ax2.set_ylabel('Phase Difference (degrees)', fontsize=12)\n",
+    "        ax2.set_title('AM/PM Characteristic\\n(Phase Distortion)', fontsize=14, fontweight='bold')\n",
+    "        ax2.legend(fontsize=11)\n",
+    "        ax2.grid(True, alpha=0.3)\n",
+    "        \n",
+    "        plt.suptitle('Power Amplifier Nonlinear Characteristics', fontsize=16, fontweight='bold')\n",
+    "        plt.tight_layout()\n",
     "        plt.show()\n",
     "        \n",
     "    def calculate_volterra_nmse(self, volterra_obj):\n",
