change gru settings

--- a/refactored_notebook.ipynb
+++ b/refactored_notebook.ipynb
@@ -109,25 +109,10 @@
      "output_type": "stream",
      "text": [
       "Using cpu device\n",
-      "Epoch  10/500  Loss=3.8967e-01  Valid=3.4332e-02  LR=1.00e-03\n",
-      "Epoch  20/500  Loss=1.0452e-01  Valid=1.2156e-02  LR=1.00e-03\n",
-      "Epoch  30/500  Loss=9.2604e-02  Valid=9.4206e-03  LR=1.00e-03\n",
-      "Epoch  40/500  Loss=6.5294e-02  Valid=7.1704e-03  LR=1.00e-03\n",
-      "Epoch  50/500  Loss=5.5361e-02  Valid=5.9997e-03  LR=1.00e-03\n",
-      "Epoch  60/500  Loss=4.4930e-02  Valid=4.9586e-03  LR=1.00e-03\n",
-      "Epoch  70/500  Loss=3.8155e-02  Valid=4.2112e-03  LR=1.00e-03\n",
-      "Epoch  80/500  Loss=3.1914e-02  Valid=3.5417e-03  LR=1.00e-03\n",
-      "Epoch  90/500  Loss=2.6765e-02  Valid=2.9753e-03  LR=1.00e-03\n",
-      "Epoch 100/500  Loss=2.2305e-02  Valid=2.4873e-03  LR=1.00e-03\n",
-      "Epoch 110/500  Loss=1.8571e-02  Valid=2.0725e-03  LR=1.00e-03\n",
-      "Epoch 120/500  Loss=1.5529e-02  Valid=1.7342e-03  LR=1.00e-03\n",
-      "Epoch 130/500  Loss=1.3095e-02  Valid=1.4638e-03  LR=1.00e-03\n",
-      "Epoch 140/500  Loss=1.1192e-02  Valid=1.2515e-03  LR=1.00e-03\n",
-      "Epoch 150/500  Loss=9.7227e-03  Valid=1.0889e-03  LR=1.00e-03\n",
-      "Epoch 160/500  Loss=8.5794e-03  Valid=9.6206e-04  LR=1.00e-03\n",
-      "Epoch 170/500  Loss=7.6563e-03  Valid=8.5995e-04  LR=1.00e-03\n",
-      "Epoch 180/500  Loss=6.8664e-03  Valid=7.7164e-04  LR=1.00e-03\n",
-      "Epoch 190/500  Loss=6.1582e-03  Valid=6.9147e-04  LR=1.00e-03\n"
+      "Epoch  10/400  Loss=1.4312e+01  Valid=3.9044e-01  LR=1.00e-01\n",
+      "Epoch  20/400  Loss=3.4789e+00  Valid=4.0619e-01  LR=1.00e-01\n",
+      "Epoch  30/400  Loss=3.3964e+00  Valid=5.3017e-01  LR=5.00e-02\n",
+      "Epoch  40/400  Loss=2.0615e+00  Valid=2.6392e-01  LR=5.00e-02\n"
      ]
     }
    ],
@@ -143,16 +128,16 @@
     "    num_layers=1,\n",
     "    thx=0.0, thh=0.0,          # start at 0 for best accuracy; increase later for sparsity\n",
     "    use_tcn_skip=True,\n",
-    "    seq_len=1024,\n",
-    "    seq_hop=1024,\n",
-    "    batch_size=16\n",
+    "    seq_len=256,\n",
+    "    seq_hop=256,\n",
+    "    batch_size=256\n",
     ")\n",
     "\n",
     "train_losses_dgru, valid_losses_dgru, best_epoch_dgru = delta_fwd.get_best_model(\n",
-    "    num_epochs=500,\n",
+    "    num_epochs=400,\n",
     "    training_dataset=simpleDataManager.training_dataset,\n",
     "    validation_dataset=simpleDataManager.validation_dataset,\n",
-    "    learning_rate=1e-3\n",
+    "    learning_rate=1e-1\n",
     ")\n",
     "\n",
     "# Evaluate NMSE on test set\n",
